
*   New `v_auto_run_prepend` property of the trajectory to switch off auto run name prepending if
    desired.

*   The trajectory no longer relies on evil `eval` to construct a class. Instead
    it relies on the global scope.

*   Better counting of loading and storing nodes to display rate in nodes/s

*   BUG FIX: Minor bug in the progressbar has been fixed to detect automatic resets.


pypet 0.1b.9

*   BUG FIX: Fixed backwards compatibility

*   BUG FIX: Metadata is loaded only once

*   Results no longer support the ``v_no_data_string`` property

*   Data of Results is no longer sorted in case of calling `f_val_to_string`

*   In accordance with the python default to call `__repr__` for displaying contained
    objects, `f_val_to_str` calls `repr` on the contained data in parameters and results.

*   Added informative __repr__ for the most commonly used classes

*   The (annoyingly long) keyword `dynamically_imported_classes` is changed to
    `dynamic_imports`. For backwards compatibility, the old keyword can still
    be used.

*   New `f_get_default` method, now one can specify a default value that should be
    returned if the requested data is not found in the trajectory

*   `progressbar` displays the run and remaining time.

*   New LINK features allowing group nodes to refer to other parts of the tree

*   The SingleRun has been removed and all interactions are with real Trajectory objects,
    but the API remained the same.

*   All *pypet* relevant imported packages will be stored by the trajectory

*   Internally the queue no longer needs to be re-passed to the QueueSender, allowing for
    easier custom multiprocessing

*   New MultiprocessWrapper (aka a light-weight environment for multiprocessing) for
    custom multiprocessing

*   StorageServices provide an ``multiproc_safe`` attribute to enable the user to check
    if they work in a multi-process safe environment
